Added NUBAN and refactored code to allow Individual accounts